# raytrace

./: CMakeLists.txt  build.sh
src/: CMakeLists.txt  camera.h  color.h  hittable.h  hittable_list.h  interval.h  material.h  ray.h  rtweekend.h  sphere.h  vec3.h
test/: CMakeLists.txt  camera_test.cpp  ppm_test.cpp  render_test.cpp
